[package]
name = "crtsh_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["json"] }
async-trait = "0.1"

[dev-dependencies]
serde_json = "1.0.78"